fix: adaptive and burger

--- a/index.html
+++ b/index.html
@@ -42,35 +42,35 @@
           <span class="line"></span><span class="line"></span
           ><span class="line"></span>
         </div>
-        <div class="burger-menu">
-          <ul>
-            <a href="#about" class="nav-link"
-              ><li class="nav-item">About me</li></a
-            >
-            <a href="#contacts" class="nav-link"
-              ><li class="nav-item">Contacts</li></a
-            >
-            <a href="#skills" class="nav-link"
-              ><li class="nav-item">Frontend skills</li></a
-            >
-            <a href="#code" class="nav-link"
-              ><li class="nav-item">Code example</li></a
-            >
-            <a href="#courses" class="nav-link"
-              ><li class="nav-item">Courses</li></a
-            >
-            <a href="#languages" class="nav-link"
-              ><li class="nav-item">Languages</li></a
-            >
-            <a href="#education" class="nav-link"
-              ><li class="nav-item">Education</li></a
-            >
-            <a href="#projects" class="nav-link"
-              ><li class="nav-item">Projects</li></a
-            >
-          </ul>
-        </div>
       </header>
+      <div class="burger-menu">
+        <ul>
+          <a href="#about" class="nav-link"
+            ><li class="nav-item">About me</li></a
+          >
+          <a href="#contacts" class="nav-link"
+            ><li class="nav-item">Contacts</li></a
+          >
+          <a href="#skills" class="nav-link"
+            ><li class="nav-item">Frontend skills</li></a
+          >
+          <a href="#code" class="nav-link"
+            ><li class="nav-item">Code example</li></a
+          >
+          <a href="#courses" class="nav-link"
+            ><li class="nav-item">Courses</li></a
+          >
+          <a href="#languages" class="nav-link"
+            ><li class="nav-item">Languages</li></a
+          >
+          <a href="#education" class="nav-link"
+            ><li class="nav-item">Education</li></a
+          >
+          <a href="#projects" class="nav-link"
+            ><li class="nav-item">Projects</li></a
+          >
+        </ul>
+      </div>
       <main class="main">
         <div class="left-side">
           <section class="photo-section">
@@ -158,7 +158,7 @@
               </li>
             </ul>
           </section>
-          <section class="section languages-section" id="languages">
+          <section class="languages-section">
             <h2 class="section-title">Languages:</h2>
             <ul class="languages-list">
               <li>Russian (Native)</li>
