--- a/index.html
+++ b/index.html
@@ -45,33 +45,34 @@
       </header>
       <div class="burger-menu">
         <ul>
-          <a href="#about" class="nav-link"
+          <a href="#about" class="nav-link-burger"
             ><li class="nav-item">About me</li></a
           >
-          <a href="#contacts" class="nav-link"
+          <a href="#contacts" class="nav-link-burger"
             ><li class="nav-item">Contacts</li></a
           >
-          <a href="#skills" class="nav-link"
+          <a href="#skills" class="nav-link-burger"
             ><li class="nav-item">Frontend skills</li></a
           >
-          <a href="#code" class="nav-link"
+          <a href="#code" class="nav-link-burger"
             ><li class="nav-item">Code example</li></a
           >
-          <a href="#courses" class="nav-link"
+          <a href="#courses" class="nav-link-burger"
             ><li class="nav-item">Courses</li></a
           >
-          <a href="#languages" class="nav-link"
+          <a href="#languages" class="nav-link-burger"
             ><li class="nav-item">Languages</li></a
           >
-          <a href="#education" class="nav-link"
+          <a href="#education" class="nav-link-burger"
             ><li class="nav-item">Education</li></a
           >
-          <a href="#projects" class="nav-link"
+          <a href="#projects" class="nav-link-burger"
             ><li class="nav-item">Projects</li></a
           >
         </ul>
       </div>
       <main class="main">
+        <div class="backdrop is-hidden"></div>
         <div class="left-side">
           <section class="photo-section">
             <h1 class="main-title">Gorbatovskiy Igor</h1>
@@ -82,7 +83,7 @@
               class="codewars-badge"
             />
           </section>
-          <section class="contacts-section">
+          <section class="contacts-section" id="contacts">
             <h2 class="section-title">Contact Information:</h2>
             <ul class="contacts-list">
               <li>
@@ -97,7 +98,7 @@
               </li>
             </ul>
           </section>
-          <section class="skills-section">
+          <section class="skills-section" id="skills">
             <h2 class="section-title" id="skills">Frontend Skills:</h2>
             <ul class="skills-list">
               <li>
@@ -158,20 +159,20 @@
               </li>
             </ul>
           </section>
-          <section class="languages-section">
+          <section class="languages-section" id="languages">
             <h2 class="section-title">Languages:</h2>
             <ul class="languages-list">
               <li>Russian (Native)</li>
               <li>English (Intermediate)</li>
             </ul>
           </section>
-          <section class="education-section">
+          <section class="education-section" id="education">
             <h2 class="section-title">My Education:</h2>
             <p>Saint Petersburg Mining University (2012)</p>
           </section>
         </div>
         <div class="right-side">
-          <section class="section">
+          <section class="section" id="about">
             <h2 class="section-title">About Me:</h2>
             <p class="text">
               I was born and live in Saint Petersburg, Russia. I have been
@@ -179,7 +180,7 @@
               study frontend development and play tennis
             </p>
           </section>
-          <section class="section">
+          <section class="section" id="courses">
             <h2 class="section-title">Courses:</h2>
             <ul class="courses-list">
               <li class="course-item">
@@ -215,7 +216,7 @@
               </li>
             </ul>
           </section>
-          <section class="projects-section">
+          <section class="projects-section" id="projects">
             <h2 class="section-title">My projects:</h2>
             <div class="slider-area">
               <img src="./assets/left.svg" class="left-btn" />
@@ -254,7 +255,7 @@
               <img src="./assets/left.svg" class="right-btn" />
             </div>
           </section>
-          <section class="section">
+          <section class="section" id="code">
             <h2 class="section-title">Code Example</h2>
             <pre class="code-field">
                     <code>
