fix: slider, burger and some styles

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
       </header>
       <div class="burger-menu">
-        <ul>
+        <ul class="items-list">
           <a href="#about" class="nav-link-burger"
             ><li class="nav-item">About me</li></a
           >
@@ -225,6 +225,7 @@
                   <div class="project">
                     <p>Dog's MEMO game</p>
                     <a
+                      target="blank"
                       href="https://rolling-scopes-school.github.io/1g000-JSFEPRESCHOOL2023Q2/memory-game/index.html"
                       ><img src="./img/dogs memo.jpg" class="project-img"
                     /></a>
@@ -232,6 +233,7 @@
                   <div class="project">
                     <p>Library</p>
                     <a
+                      target="blank"
                       href="https://rolling-scopes-school.github.io/1g000-JSFEPRESCHOOL2023Q2/library/"
                       ><img src="./img/library.jpg" class="project-img"
                     /></a>
@@ -239,6 +241,7 @@
                   <div class="project">
                     <p>Image gallery</p>
                     <a
+                      target="blank"
                       href="https://rolling-scopes-school.github.io/1g000-JSFEPRESCHOOL2023Q2/image-galery/index.html"
                       ><img src="./img/screen.jpg" class="project-img"
                     /></a>
@@ -246,6 +249,7 @@
                   <div class="project">
                     <p>Mem slider</p>
                     <a
+                      target="blank"
                       href="https://1g000.github.io/cssMemeSlider/cssMemeSlider/index.html"
                       ><img src="./img/memslider.jpg" class="project-img"
                     /></a>
