fix: add new certificate and favicon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="assets/favicon.ico" />
+    <link rel="icon" href="assets/favicon.png" />
     <title>cv</title>
   </head>
   <body>
@@ -185,8 +185,8 @@
             <ul class="courses-list">
               <li class="course-item">
                 <img
-                  src="./img/HTML.jpg"
-                  class="cert-vert"
+                  src="./img/qivj2e3c.jpg"
+                  class="cert"
                   title="RS SCHOOL:JS/FE Pre-School (2023)"
                 />
               </li>
