feat: clear index.html

--- a/index.html
+++ b/index.html
@@ -3,292 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="assets/favicon.png" />
-    <title>cv</title>
+    <title>Document</title>
   </head>
-  <body>
-    <div class="container">
-      <header class="header">
-        <nav class="nav">
-          <ul class="nav-list">
-            <a href="#about" class="nav-link"
-              ><li class="nav-item">About me</li></a
-            >
-            <a href="#contacts" class="nav-link"
-              ><li class="nav-item">Contacts</li></a
-            >
-            <a href="#skills" class="nav-link"
-              ><li class="nav-item">Frontend skills</li></a
-            >
-            <a href="#code" class="nav-link"
-              ><li class="nav-item">Code example</li></a
-            >
-            <a href="#courses" class="nav-link"
-              ><li class="nav-item">Courses</li></a
-            >
-            <a href="#languages" class="nav-link"
-              ><li class="nav-item">Languages</li></a
-            >
-            <a href="#education" class="nav-link"
-              ><li class="nav-item">Education</li></a
-            >
-            <a href="#projects" class="nav-link"
-              ><li class="nav-item">Projects</li></a
-            >
-          </ul>
-        </nav>
-        <div class="burger-menu-icon">
-          <span class="line"></span><span class="line"></span
-          ><span class="line"></span>
-        </div>
-      </header>
-      <div class="burger-menu">
-        <ul class="items-list">
-          <a href="#about" class="nav-link-burger"
-            ><li class="nav-item">About me</li></a
-          >
-          <a href="#contacts" class="nav-link-burger"
-            ><li class="nav-item">Contacts</li></a
-          >
-          <a href="#skills" class="nav-link-burger"
-            ><li class="nav-item">Frontend skills</li></a
-          >
-          <a href="#code" class="nav-link-burger"
-            ><li class="nav-item">Code example</li></a
-          >
-          <a href="#courses" class="nav-link-burger"
-            ><li class="nav-item">Courses</li></a
-          >
-          <a href="#languages" class="nav-link-burger"
-            ><li class="nav-item">Languages</li></a
-          >
-          <a href="#education" class="nav-link-burger"
-            ><li class="nav-item">Education</li></a
-          >
-          <a href="#projects" class="nav-link-burger"
-            ><li class="nav-item">Projects</li></a
-          >
-        </ul>
-      </div>
-      <main class="main">
-        <div class="backdrop is-hidden"></div>
-        <div class="left-side">
-          <section class="photo-section">
-            <h1 class="main-title">Gorbatovskiy Igor</h1>
-            <h2 class="main-section-title">trainee frontend developer</h2>
-            <img src="./img/photo.jpg" class="profile-photo" alt="my photo" />
-            <img
-              src="https://www.codewars.com/users/rsschool_a7709b1e9f8d2cb1/badges/large"
-              class="codewars-badge"
-            />
-          </section>
-          <section class="contacts-section" id="contacts">
-            <h2 class="section-title">Contact Information:</h2>
-            <ul class="contacts-list">
-              <li>
-                E-mail:
-                <a href="mailto:gorbatovskiy.igor@gmail.com"
-                  >gorbatovskiy.igor@gmail.com</a
-                >
-              </li>
-              <li>
-                GitHub:
-                <a href="https://github.com/1G000">https://github.com/1G000</a>
-              </li>
-            </ul>
-          </section>
-          <section class="skills-section" id="skills">
-            <h2 class="section-title" id="skills">Frontend Skills:</h2>
-            <ul class="skills-list">
-              <li>
-                <img
-                  class="logo"
-                  alt="html-logo"
-                  title="HTML"
-                  src="./assets/icons8-html.svg"
-                />
-              </li>
-              <li>
-                <img
-                  class="logo"
-                  alt="css-logo"
-                  title="CSS"
-                  src="./assets/icons8-css.svg"
-                />
-              </li>
-              <li>
-                <img
-                  class="logo"
-                  alt="sass-logo"
-                  title="Sass"
-                  src="./assets/icons8-sass.svg"
-                />
-              </li>
-              <li>
-                <img
-                  class="logo"
-                  alt="javascript-logo"
-                  title="JavaScript"
-                  src="./assets/icons8-javascript.svg"
-                />
-              </li>
-              <li>
-                <img
-                  class="logo"
-                  alt="react-logo"
-                  title="React"
-                  src="./assets/icons8-react.svg"
-                />
-              </li>
-              <li>
-                <img
-                  class="logo"
-                  alt="GitHub-logo"
-                  title="GitHub"
-                  src="./assets/icons8-github.svg"
-                />
-              </li>
-              <li>
-                <img
-                  class="logo"
-                  alt="VSCode-logo"
-                  title="VSCode"
-                  src="./assets/icons8-visual-studio-code.svg"
-                />
-              </li>
-            </ul>
-          </section>
-          <section class="languages-section" id="languages">
-            <h2 class="section-title">Languages:</h2>
-            <ul class="languages-list">
-              <li>Russian (Native)</li>
-              <li>English (Intermediate)</li>
-            </ul>
-          </section>
-          <section class="education-section" id="education">
-            <h2 class="section-title">My Education:</h2>
-            <p>Saint Petersburg Mining University (2012)</p>
-          </section>
-        </div>
-        <div class="right-side">
-          <section class="section" id="about">
-            <h2 class="section-title">About Me:</h2>
-            <p class="text">
-              I was born and live in Saint Petersburg, Russia. I have been
-              working as a power engineer for over ten years. In my spare time I
-              study frontend development and play tennis
-            </p>
-          </section>
-          <section class="section" id="courses">
-            <h2 class="section-title">Courses:</h2>
-            <ul class="courses-list">
-              <li class="course-item">
-                <img
-                  src="./img/qivj2e3c.jpg"
-                  class="cert"
-                  title="RS SCHOOL:JS/FE Pre-School (2023)"
-                />
-              </li>
-              <li>
-                <img
-                  src="./img/HTML.jpg"
-                  class="cert-vert"
-                  title=" HTML academy: Javascript. Professional development of web interfaces
-                (2022)"
-                />
-              </li>
-              <li>
-                <img
-                  src="./img/js.jpg"
-                  class="cert"
-                  title="Udemy: JavaScript -
-                Full course (2022)"
-                />
-              </li>
-              <li>
-                <img
-                  src="./img/react.jpg"
-                  class="cert"
-                  title=" Udemy: React -
-                Full course (2022)"
-                />
-              </li>
-            </ul>
-          </section>
-          <section class="projects-section" id="projects">
-            <h2 class="section-title">My projects:</h2>
-            <div class="slider-area">
-              <img src="./assets/left.svg" class="left-btn" />
-              <div class="slider">
-                <div class="projects">
-                  <div class="project">
-                    <p>Dog's MEMO game</p>
-                    <a
-                      target="blank"
-                      href="https://rolling-scopes-school.github.io/1g000-JSFEPRESCHOOL2023Q2/memory-game/index.html"
-                      ><img src="./img/dogs memo.jpg" class="project-img"
-                    /></a>
-                  </div>
-                  <div class="project">
-                    <p>Library</p>
-                    <a
-                      target="blank"
-                      href="https://rolling-scopes-school.github.io/1g000-JSFEPRESCHOOL2023Q2/library/"
-                      ><img src="./img/library.jpg" class="project-img"
-                    /></a>
-                  </div>
-                  <div class="project">
-                    <p>Image gallery</p>
-                    <a
-                      target="blank"
-                      href="https://rolling-scopes-school.github.io/1g000-JSFEPRESCHOOL2023Q2/image-galery/index.html"
-                      ><img src="./img/screen.jpg" class="project-img"
-                    /></a>
-                  </div>
-                  <div class="project">
-                    <p>Mem slider</p>
-                    <a
-                      target="blank"
-                      href="https://1g000.github.io/cssMemeSlider/cssMemeSlider/index.html"
-                      ><img src="./img/memslider.jpg" class="project-img"
-                    /></a>
-                  </div>
-                </div>
-              </div>
-              <img src="./assets/left.svg" class="right-btn" />
-            </div>
-          </section>
-          <section class="section" id="code">
-            <h2 class="section-title">Code Example</h2>
-            <pre class="code-field">
-                    <code>
-function getMessage () {
-  let message = '';
-  for (let i=1; i &lt; getRandomNumber(1, 3); i++) {
-    message += `${COMMENTS_TEXT[getRandomNumber(0, COMMENTS_TEXT.length-1)]}`;
-  }
-return message.trim();
-}
-getMessage ();
-                    </code>
-                </pre>
-          </section>
-        </div>
-      </main>
-      <footer class="footer">
-        <a href="https://github.com/1G000"
-          ><img class="github-logo" src="./img/github-mark.svg"
-        /></a>
-        <p>2023</p>
-        <a href="https://rs.school/js/"
-          ><img
-            src="./img/rs_school_js.svg"
-            class="school-logo"
-            alt="rs school logo"
-        /></a>
-      </footer>
-    </div>
-    <script src="./script.js"></script>
-  </body>
+  <body></body>
 </html>
